kubernetes-tiny-web-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiny-web-client-deployment
  namespace: tiny-web-client
  labels:
    app: tiny-web-client
spec:
  replicas: 3
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: tiny-web-client
  template:
    metadata:
      namespace: tiny-web-client
      labels:
        app: tiny-web-client
    spec:
      containers:
        - name: tiny-web-client
          image: stubin87/tiny-api-web-client:v0.7.0
          ports:
            - containerPort: 80
