kubernetes-tiny-web-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-web-client-clusterip-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tiny-web-client
