kubernetes-tiny-web-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiny-web-client-ingress
  namespace: tiny-web-client
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - tiny.wc.serj-tubin.com
    - tiny.wc.2beens.xyz
    - www.2beens.xyz
    secretName: letsencrypt-nginx
  rules:
  - host: "tiny.wc.serj-tubin.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tiny-web-client-clusterip-service
            port:
              number: 80
  - host: "tiny.wc.2beens.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tiny-web-client-clusterip-service
            port:
              number: 80
  - host: "www.2beens.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tiny-web-client-clusterip-service
            port:
              number: 80
